--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 8093:8093
       - 8094:8094
       - 11210:11210
+    environment:
+      - CLUSTER_TYPE=MASTER
     deploy:
       resources:
         limits:
